--- a/app.json
+++ b/app.json
@@ -1,38 +1,44 @@
 {
-  "name": "Keycloak X Deployment to Heroku",
-  "description": "Deployment of the Keycloak.X Identity and Access Management Solution to Heroku using a slightly adapted version of the official Docker container image",
-  "keywords": [
-    "identity",
-    "oauth",
-    "saml",
-    "keycloak",
-    "keycloak.x",
-    "heroku",
-    "quarkus"
-  ],
-  "stack": "container",
-  "repository": "https://github.com/FiveDevOrg/AuxbyKeycloak",
-  "logo": "https://design.jboss.org/keycloak/logo/images/keycloak_icon_128px.png",
-  "success_url": "/",
-  "env": {
-    "KEYCLOAK_ADMIN": {
-      "description": "Initial Admin user name",
-      "value": "admin"
+    "name": "Keycloak Deployment to Heroku - Free Dynos",
+    "description": "Deployment of the Keycloak Identity and Access Management Solution to Heroku using a slightly adapted version of the official Docker container image",
+    "keywords": [
+        "identity",
+        "oauth",
+        "saml",
+        "keycloak",
+        "heroku"
+    ],
+    "stack": "container",
+    "repository": "https://github.com/dpikalov/keycloak-heroku-free",
+    "logo": "https://www.keycloak.org/resources/images/keycloak_logo_480x108.png",
+    "success_url": "/",
+    "env": {
+        "KEYCLOAK_USER": {
+            "description": "Initial Admin user name",
+            "value": "admin"
+        },
+        "KEYCLOAK_PASSWORD": {
+            "description": "Initial Admin password",
+            "value": "change_me"
+        },
+        "KEYCLOAK_FRONTEND_URL": {
+            "description": "TODO",
+            "value": "https://keycloak-heroku-free.herokuapp.com/auth/"
+        },
+        "PROXY_ADDRESS_FORWARDING": {
+            "description": "Set to true since we will be running behind Heroku's load balancers",
+            "value": "true"
+        }
     },
-    "KEYCLOAK_ADMIN_PASSWORD": {
-      "description": "Initial Admin password",
-      "value": "change_me"
-    }
-  },
-  "formation": {
-    "web": {
-      "quantity": 1,
-      "size": "free"
-    }
-  },
-  "addons": [
-    {
-      "plan": "heroku-postgresql:hobby-dev"
-    }
-  ]
+    "formation": {
+        "web": {
+            "quantity": 1,
+            "size": "free"
+        }
+    },
+    "addons": [
+        {
+            "plan": "heroku-postgresql:hobby-dev"
+        }
+    ]
 }
