--- a/app.json
+++ b/app.json
@@ -35,5 +35,10 @@
             "quantity": 1,
             "size": "free"
         }
-    }
+    },
+     "addons": [
+        {
+            "plan": "heroku-postgresql:hobby-dev"
+        }
+    ]
 }
