--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
     },
      "addons": [
         {
-            "plan": "heroku-postgresql:hobby-dev"
+            "plan": "heroku-postgresql:mini"
         }
     ]
 }
